--- a/TODO.txt
+++ b/TODO.txt
@@ -1,15 +1,15 @@
 
 这个TODO包括要生成的代码的优化或者功能，也包括生成代码的代码的优化改进。
 
-# New => new
+# OK - New => new
 # String <=> &str，有需要的地方替换成这个
-# fn() => Fn()通用化，可同时支持普通函数和闭包。
+# OK - fn() => Fn()通用化，可同时支持普通函数和闭包。
 # Struct to struct alias u64.
-# #![feature(libc)]应该可以只放在lib.rs中。
+# #![feature(libc)]应该可以只放在lib.rs中。应该移动不出来。
 # SlotProxy 实例作为对应sender的child object
 # module层级减少一下，Qt的类名不太容易冲突的。
 # signal方法现在生成了真实的rs方法，去掉。
-# signal的使用方法目前加了个后缀_1()，需要去掉。
+# OK - signal的使用方法目前加了个后缀_1()，需要去掉。
 # genrust的ClassContext与MethodContext整合优化
 # 生成的库文件大小问题，有可能太大了，为什么呢？怎么解决呢？
 # 写一些供内部使用的宏。(变参重载)？
