--- a/TODO.txt
+++ b/TODO.txt
@@ -14,9 +14,9 @@
 # genrust的ClassContext与MethodContext整合优化
 # 生成的库文件大小问题，有可能太大了，为什么呢？怎么解决呢？
 # 写一些供内部使用的宏。(变参重载)？
-# 命令行参数，实现执行不同生成器。
 # OK - 静态方法与动态方法同名
 # 参数默认值，怎么用rs表达呢？有可能还要继续加重载方法实现。Default::default。把默认值转换为对应的Rust值。
+#    std::Option方式，看上去很美，实际用起来啰嗦吧。
 # OK - Qt类的内联方法
 # enum类型成员
 # qt 全局函数，全局常量。
@@ -40,4 +40,7 @@
 # 每个类的类型ID分配，则在方法实现的时候，只记录类型ID，也许最终生成的库大小会有所优化
 # overload方法的返回值准确化。目前发现overload有返回值不同的情况，使用了interface{}。
 # 对于forward declaration type类型，分package之后着实不好处理。比如在core包中引用了gui包中的类型。
+
+### gentool
+# 命令行参数，实现执行不同生成器。
 
