parameter default value

--- a/TODO.txt
+++ b/TODO.txt
@@ -15,8 +15,10 @@
 # 生成的库文件大小问题，有可能太大了，为什么呢？怎么解决呢？
 # 写一些供内部使用的宏。(变参重载)？
 # OK - 静态方法与动态方法同名
-# 参数默认值，怎么用rs表达呢？有可能还要继续加重载方法实现。Default::default。把默认值转换为对应的Rust值。
+# OK - 参数默认值，怎么用rs表达呢？有可能还要继续加重载方法实现。把默认值转换为对应的Rust值。
 #    std::Option方式，看上去很美，实际用起来啰嗦吧。
+#    Default::default不行。
+#    最终使用Option参数，实现一个简单的eval表达式。
 # OK - Qt类的内联方法
 # enum类型成员
 # qt 全局函数，全局常量。
